# prowl

./: .gitignore  Cargo.toml  LICENSE  README.md  REQUIREMENTS.md
.github/workflows/: ci.yml  release.yml
assets/macos/: entitlements.plist
crates/prowl/: Cargo.toml
crates/prowl-app/: Cargo.toml
crates/prowl-app/src/: lib.rs
crates/prowl-core/: Cargo.toml
crates/prowl-core/examples/: arp_probe.rs  detect.rs  name_probe.rs  port_probe.rs  scan_once.rs
crates/prowl-core/src/: engine.rs  lib.rs  model.rs  net.rs
crates/prowl-core/src/discovery/: arp.rs  mock.rs  mod.rs  ping_neigh.rs
crates/prowl-core/src/enrich/: mdns.rs  mod.rs  netbios.rs  oui.rs  system_dns.rs
crates/prowl-core/src/scan/: connect.rs  mock.rs  mod.rs
crates/prowl-gpui/: Cargo.toml
crates/prowl-gpui/src/: assets.rs  lib.rs
crates/prowl-tui/: Cargo.toml
crates/prowl-tui/src/: lib.rs
crates/prowl-update/: Cargo.toml
crates/prowl-update/src/: domain.rs  io.rs  lib.rs
crates/prowl-web/: Cargo.toml
crates/prowl-web/src/: index.html  lib.rs
crates/prowl/src/: main.rs
docs/: RELEASING.md
e2e/: .gitignore  package-lock.json  package.json  playwright.config.js
e2e/tests/: prowl.spec.js
xtask/: Cargo.toml
xtask/src/: main.rs
