[workspace]
resolver = "2"
members = [
    "crates/prowl-app",
    "crates/prowl-core",
    "crates/prowl-tui",
    "crates/prowl-web",
    "crates/prowl-update",
    "crates/prowl",
    "xtask",
]
default-members = ["crates/prowl"]
# GPUI フロントは重いgit依存(zed/gpui)なので workspace から除外し、
# 既定ビルド/CIを軽いまま保つ。`--features gpui` 時のみ bin から path で引く。
exclude = ["crates/prowl-gpui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.96"

[workspace.dependencies]
# 内部クレート
prowl-app = { path = "crates/prowl-app" }
prowl-core = { path = "crates/prowl-core" }
prowl-tui = { path = "crates/prowl-tui" }
prowl-web = { path = "crates/prowl-web" }
prowl-update = { path = "crates/prowl-update" }
# 外部
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws"] }
