[package]
name = "prowl-gpui"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "prowl: GPUI ネイティブフロントエンド (P4)"

# crates.io 版 + `runtime_shaders` → Metal シェーダを実行時にコンパイルするため、
# ビルド時の `xcrun metal`(フル Xcode) が不要。CommandLineTools だけでビルド/実行できる。
# 重い依存(600+ crates)のため親 workspace から exclude し、bin の `gpui` feature で path 経由参照。

[dependencies]
prowl-app = { path = "../prowl-app" }
prowl-update = { path = "../prowl-update" }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
gpui = { version = "0.2.2", features = ["runtime_shaders"] }
gpui-component = "0.5.1"
