[package]
name = "prowl-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "prowl: Web(DOM) フロントエンド (axum + WebSocket)"

[dependencies]
prowl-app = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
