[package]
name = "prowl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "prowl: TUIで扱うLANスキャナ（起動口）"

[dependencies]
prowl-app = { workspace = true }
prowl-core = { workspace = true }
prowl-tui = { workspace = true }
prowl-web = { workspace = true }
prowl-update = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
# GPUI フロントは重い git 依存＋Metal(要フルXcode)のため optional。
# `--features gpui` でのみ有効（prowl-gpui の desktop feature を引く）。
prowl-gpui = { path = "../prowl-gpui", optional = true }

[features]
gpui = ["dep:prowl-gpui"]
